--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,13 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <ul>
+      <% for(let i=0; i < data.length; i++) { %>
+        <li>
+          <%= data[i].name %>
+          <%= data[i].photo %>
+        </li>
+      <% } %>
+    </ul>
   </body>
 </html>
