--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,146 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  padding: 50px;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+*,*:before,*:after{
+	box-sizing: border-box;
+}
+img{
+max-width: 100%;
+height: auto ;
+vertical-align: bottom;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+body {
+  padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.link {
+  color: #96785F;
+}
+
+h1{
+  font-size: 20px;
+  font-weight: 700;
+}
+
+table{
+  margin-top: 20px;
+  border-collapse:collapse;
+
+}
+
+th{
+  padding: 5px;
+  background-color:#009879;
+  color:#ffffff;
+  font-weight: 600;
+
+}
+
+td{
+  padding: 5px;
+  background-color:#ffffff;
+  text-align:center;
+}
+
+tr{
+  border-bottom: 1px solid #dddddd;
+}
+
+tr:last-of-type{
+  border-bottom: 2px solid #009879;
+}
+
+tr:nth-of-type(even) td{
+  background-color:#f3f3f3;
+}
+
+input{
+  width: 100%;
+  border: none;
+  background: transparent;
+  text-align: center;
+  &:focus-visible{
+    border: none;
+    outline: none;
+  }
+}
+
+.studentsListTable td, .studentsListTable th{
+  width:50vw
+}
+.studentsPageTable th, .studentsPageTable td{
+  width:50vw
+}
+.studentsListTable{
+  margin: 20px 20px 0;
+  max-width: 400px
+}
+.studentsPageTable{
+  margin: 20px 20px 0;
+  max-width: 400px
+}
+.studentsPageTable tfoot td{
+  text-align: right;
+}
+.btn{
+  min-width: 100px;
+  padding: 2px 5px;
+  border-radius: 2px;
+  border: none;
+  background-color: #BF9E7E;
+  font-weight: 800;
+  color: #fff;
+  trnasiotn: 0.5s;
+  &:hover{
+    cursor: pointer;
+    background-color: #96785F;
+  }
 }
