--- a/views/students/studentPage.ejs
+++ b/views/students/studentPage.ejs
@@ -4,14 +4,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= data.Name %></title>
+  <title>學生資訊</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <table>
+  <h1>學生內頁</h1>
+  <table class="studentsPageTable">
+    <thead>
       <tr>
-        <td>Student ID</td>
-        <td><%= data.id %></td>
+        <th colspan="2">學生資訊</th>
       </tr>
-    </table>
+    </thead>
+    <tbody>
+      <tr>
+        <td>名稱</td>
+        <td><%= student.name %></td>
+      </tr>
+      <tr>
+        <td>信箱</td>
+        <td><%= student.email %></td>
+      </tr>
+      <tr>
+        <td>年紀</td>
+        <td><%= student.age %></td>
+      </tr>
+      <tr>
+        <td>主修</td>
+        <td><%= student.major %></td>
+      </tr>
+      <tr>
+        <td>獎學金(主修)</td>
+        <td><%= student.scholarship?.merit %></td>
+      </tr>
+      <tr>
+        <td>獎學金(其他)</td>
+        <td><%= student.scholarship?.other %></td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="2">
+          <a class="btn" href="/students/studentEdit/<%= student.id %>"> 修改</a>
+        </td>
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
