✨ feat(students): 學生個資畫面(UD)

--- a/views/students/studentEdit.ejs
+++ b/views/students/studentEdit.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>學生資訊 (修改)</h1>
-  <form action="/students/studentInsert/<%= student.id %>" method="POST">
+  <form action="/students/studentEdit/<%= student.id %>" method="post">
     <table class="studentsPageTable">
       <thead>
         <tr>
