--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,60 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      body {
-        padding: 3rem;
-      }
-      .red{
-        color:  #7e1129;
-      }
-    </style>
+    <title>註冊</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <h1>註冊</h1>
     <h5 class="red"><%= message %></h5>
-    <form method="POST" action="/students/signup">
-      <div class="mb-3">
-        <label for="name" class="form-label">name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="name"
-          aria-describedby="emailHelp"
-          name="name"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          name="email"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          name="password"
-        />
-      </div>
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+    <form method="POST" action="/students/singUp">
+      <table class="studentsPageTable">
+        <thead>
+          <tr>
+            <th colspan="2">學生註冊</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <label for="name" class="form-label">名稱</label>
+            </td>
+            <td>
+              <input
+              type="text"
+              class="form-control"
+              id="name"
+              aria-describedby="emailHelp"
+              name="name"
+            />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="exampleInputEmail1" class="form-label">信箱</label>
+            </td>
+            <td>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="email"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="exampleInputPassword1" class="form-label">密碼</label>
+            </td>
+            <td>
+              <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              name="password"
+            />
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2">
+              <button class="btn" type="submit"> 送出</button>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
     </form>
   </body>
 </html>
