--- a/views/students/studentsList.ejs
+++ b/views/students/studentsList.ejs
@@ -14,6 +14,7 @@
       <tr>
         <th>名稱</th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -21,6 +22,7 @@
       <tr>
         <td><%= student.name %></td>
         <td><a class="link" href="/students/studentsList/<%= student.id %>">查看資料</a></td>
+        <td><a class="link" href="/students/studentDelete/<%= student.id %>">刪除資料</a></td>
       </tr>
       <% }) %>
     </tbody>
