--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>註冊</h1>
     <h5 class="red"><%= message %></h5>
-    <form method="POST" action="/students/singUp">
+    <form method="POST" action="/students/signUp">
       <table class="studentsPageTable">
         <thead>
           <tr>
