--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <ul>
-      <% for(let i=0; i < data.length; i++) { %>
-        <li>
-          <%= data[i].name %>
-          <%= data[i].photo %>
-        </li>
-      <% } %>
-    </ul>
+    <p>請前往 <a href="/students/signup">註冊頁</a> </p>
   </body>
 </html>
