--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>登入</h1>
-    <h5 class="red"><%= message %></h5>
+    <%- include("students/errorTemplate") %>
     <form method="POST" action="/students/login">
       <table class="studentsPageTable">
         <thead>
