--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>註冊</h1>
-    <h5 class="red"><%= message %></h5>
+    <%- include("students/errorTemplate") %>
+
     <form method="POST" action="/students/signUp">
       <table class="studentsPageTable">
         <thead>
