--- a/views/students/studentsList.ejs
+++ b/views/students/studentsList.ejs
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody>
-      <% data.forEach(student => { %>
+      <% students.forEach(student => { %>
       <tr>
         <td><%= student.name %></td>
         <td><a class="link" href="/students/studentsList/<%= student.id %>">查看資料</a></td>
